[package]
name = "uepMagicStatServer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_version = "0.4.0"
text-colorizer = "1.0.0"
dotenvy = "0.15.7"
unix-time = "0.1.5"
regex = { version = "1.8.3" }
console = "0.15.7"

mysql = { version = "24.0.0" }

actix-web = "1.0.9"
serde = { version = "1.0.160", features = ["derive"]}
signal-hook = "0.3.17"

[[bin]]
path = "src/uepMagicStatServer.rs"
name = "uepMagicStatServer"


